; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_mode.c_mode_get_icon.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_mode.c_mode_get_icon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @mode_get_icon(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %9 = icmp ne %struct.TYPE_4__* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i32 @g_assert(i32 %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = bitcast {}** %13 to i32* (%struct.TYPE_4__*, i32, i32)**
  %15 = load i32* (%struct.TYPE_4__*, i32, i32)*, i32* (%struct.TYPE_4__*, i32, i32)** %14, align 8
  %16 = icmp ne i32* (%struct.TYPE_4__*, i32, i32)* %15, null
  br i1 %16, label %17, label %26

17:                                               ; preds = %3
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = bitcast {}** %19 to i32* (%struct.TYPE_4__*, i32, i32)**
  %21 = load i32* (%struct.TYPE_4__*, i32, i32)*, i32* (%struct.TYPE_4__*, i32, i32)** %20, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32* %21(%struct.TYPE_4__* %22, i32 %23, i32 %24)
  store i32* %25, i32** %4, align 8
  br label %27

26:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %27

27:                                               ; preds = %26, %17
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local i32 @g_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
